Handle EITR records in VMS Alpha binaries with overlarge command length parameters.

PR binutils/21579
	* vms-alpha.c (_bfd_vms_slurp_etir): Extend check of cmd_length.